# polygonal_roadmaps

./: .gitignore  Pathfinding.ipynb  README.md  all_versions.slurm  benchmark.bash  config.yml  environment.yml  requirements.txt  setup.cfg  single_job.bash
.github/workflows/: python-package-conda.yml  python-package.yaml  tests.yaml
benchmark/DrivingSwarm/scenarios/: icra2021.yml  icra2024.yml  icra2024_1m.yml
benchmark/config/: CBS_maze.yml  CBS_maze_even.yml  CBS_maze_random.yml  CBSh_maze_even.yml  CBSh_maze_random.yml  config.yml
benchmark/planner_config/: ACO.yml  CBS.yml  CBS_horizon_10.yml  CBS_horizon_3.yml  CCR.yml  CCRv2.yml  PRIO.yml  PrioIndex.yml  PrioSame.yml
benchmark/problem_parameters/: default.yml  h3.yml  h3s1.yml  h5.yml  h5s1.yml  s1.yml
benchmark/scenario_config/: maze_even.yml  maze_random.yml  room_32_even.yml  room_32_random.yml
cluster_results/CBS.yml/DrivingSwarm;icra2024.yaml;icra2024.yml/1/: history.feather  result.yml
cluster_results/CBS.yml/DrivingSwarm;icra2024.yaml;icra2024.yml/10/: history.feather  result.yml
cluster_results/CBS.yml/DrivingSwarm;icra2024.yaml;icra2024.yml/11/: history.feather  result.yml
polygonal_roadmaps/: __main__.py  cli.py  environment.py  executor.py  geometry.py  pathfinding.py  planner.py  planning.py  polygonal_roadmap.py  utils.py
src/polygonal_roadmaps/: pathfinding.py
test/: __init__.py  test_geometry.py  test_integration.py  test_pathfinding.py  test_planning.py  test_polygonal_roadmap.py
test/resources/: test_graph.xml
(+381 files in other folders)
