[metadata]
name = polygonal_roadmaps
version = 0.0.1
author = Sebastian Mai
author_email = sebastian.mai@ovgu.de
description = An implementation of the polygonal roadmaps and pathfinding within the roadmaps
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ovgu-FINken/polygonal_roadmaps
project_urls =
    Bug Tracker = https://github.com/ovgu-FINken/polygonal_roadmaps/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[nosetests]
verbosity=1
detailed-errors=1
with-coverage=1
cover-package=polygonal_roadmaps
nologcapture=1

[flake8]
ignore = E402
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-complexity = 10
